xee-xslt-ast/src/snapshots/xee_xslt_ast__value_template__tests__string_unescaped_unclosed_start_curly.snap
---
source: xee-xslt-ast/src/value_template.rs
expression: "parse(\"hello{world\", &namespaces)"
---
Err(XPath(ExpectedFound(
  span: SimpleSpan(
    start: 6,
    end: 11,
    context: (),
  ),
)))
