xee-xslt-ast/src/snapshots/xee_xslt_ast__value_template__tests__string_unescaped_unclosed_start_curly_with_span.snap
---
source: xee-xslt-ast/src/value_template.rs
expression: "parse_with_span(s, span)"
---
Err(UnescapedCurly(
  c: '{',
  span: Span(
    start: 16,
    end: 17,
  ),
))
