xee-xslt-ast/src/snapshots/xee_xslt_ast__value_template__tests__string_with_empty_value.snap
---
source: xee-xslt-ast/src/value_template.rs
expression: "parse(\"hello {}!\")"
---
Ok([
  String(
    text: "hello ",
    span: Span(
      start: 0,
      end: 6,
    ),
  ),
  Value(
    text: "",
    span: Span(
      start: 7,
      end: 7,
    ),
  ),
  String(
    text: "!",
    span: Span(
      start: 8,
      end: 9,
    ),
  ),
])
