xee-xslt-ast/src/snapshots/xee_xslt_ast__value_template__tests__string_with_multiple_values.snap
---
source: xee-xslt-ast/src/value_template.rs
expression: "parse(\"hello {a} and {b}!\", &namespaces)"
---
Ok([
  String(
    text: "hello ",
    span: Span(
      start: 0,
      end: 6,
    ),
  ),
  Value(
    xpath: XPath(Expr([
      Path(PathExpr(
        steps: [
          AxisStep(AxisStep(
            axis: Child,
            node_test: NameTest(Name(Name(
              name: "a",
              prefix: None,
              namespace: None,
            ))),
            predicates: [],
          )),
        ],
      )),
    ])),
    span: Span(
      start: 7,
      end: 8,
    ),
  ),
  String(
    text: " and ",
    span: Span(
      start: 9,
      end: 14,
    ),
  ),
  Value(
    xpath: XPath(Expr([
      Path(PathExpr(
        steps: [
          AxisStep(AxisStep(
            axis: Child,
            node_test: NameTest(Name(Name(
              name: "b",
              prefix: None,
              namespace: None,
            ))),
            predicates: [],
          )),
        ],
      )),
    ])),
    span: Span(
      start: 15,
      end: 16,
    ),
  ),
  String(
    text: "!",
    span: Span(
      start: 17,
      end: 18,
    ),
  ),
])
