xee-xslt-ast/src/snapshots/xee_xslt_ast__value_template__tests__string_with_value.snap
---
source: xee-xslt-ast/src/value_template.rs
expression: "parse(\"hello {world}!\")"
---
Ok([
  String(
    text: "hello ",
    span: Span(
      start: 0,
      end: 6,
    ),
  ),
  Value(
    text: "world",
    span: Span(
      start: 7,
      end: 12,
    ),
  ),
  String(
    text: "!",
    span: Span(
      start: 13,
      end: 14,
    ),
  ),
])
