xee-xslt-ast/src/snapshots/xee_xslt_ast__value_template__tests__string_with_value_in_span.snap
---
source: xee-xslt-ast/src/value_template.rs
expression: "parse_with_span(s, span, &namespaces)"
---
Ok([
  String(
    text: "hello ",
    span: Span(
      start: 10,
      end: 16,
    ),
  ),
  Value(
    xpath: XPath(Expr([
      Path(PathExpr(
        steps: [
          AxisStep(AxisStep(
            axis: Child,
            node_test: NameTest(Name(Name(
              name: "world",
              prefix: None,
              namespace: None,
            ))),
            predicates: [],
          )),
        ],
      )),
    ])),
    span: Span(
      start: 17,
      end: 22,
    ),
  ),
  String(
    text: "!",
    span: Span(
      start: 23,
      end: 24,
    ),
  ),
])
